--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,14 +5,14 @@ volumes:
     name: wordpress
     driver: local
     driver_opts:
-      device: /Users/rnauke/Documents/GitHub/inception/srcs/requirements/wordpress
+      device: ~/volumes/wordpress
       o: bind
       type: none
   mariadb:
     name: mariadb
     driver: local
     driver_opts:
-      device: /Users/rnauke/Documents/GitHub/inception/srcs/requirements/mariadb
+      device: ~/volumes/mariadb
       o: bind
       type: none
 
