--- a/srcs/.env
+++ b/srcs/.env
@@ -7,8 +7,9 @@ WP_ADMIN_USR=narouv
 WP_ADMIN_PWD=12345
 WP_ADMIN_EMAIL=narouv@gmail.com
 WP_USR=rnauke
+WP_PWD=rnauke
 WP_EMAIL=narouv222@gmail.com
-WP_PWD=userpass
+
 
 db1_name=db_wordpress
 db1_user=db_user
